@@ -36,9 +36,9 @@ DEST - where to store the backup. This can be:
 	directory
 
 OPTIONS:
- -k KEYFILE encrypt all files, using crypt.pl
- -z         compress all files, using gzip.pl
-            If both -z and -k are given, compression is done first
+ -k KEYFILE encrypt all files, using mcrypt (rdup-crypt)
+ -g	    encrypt all files, using gpg (rdup-gpg)
+ -z         compress all files, using gzip (rdup-gzip)
  -E FILE    use FILE as an exclude list
  -H         perform hourly backups
  -f         force a full dump
